# Operating_Systems-XV6-HW2

./: .gitignore  CMakeLists.txt  Makefile  README.md  defs.h  fairness.c  init.c  kernel.ld  lapic.c  mlq.c  mlq.h  param.h  proc.c  proc.h  queue.c  queue.h  set_priority.c  sh.c  syscall.c  syscall.h  sysproc.c  trap.c  user.h  usys.S
