cmake_minimum_required(VERSION 3.16)
project(Operating_Systems_XV6_HW2 C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(Operating_Systems_XV6_HW2
    asm.h
    bio.c
    bootmain.c
    buf.h
    cat.c
    console.c
    date.h
    defs.h
    echo.c
    elf.h
    exec.c
    fairness.c
    fcntl.h
    file.c
    file.h
    forktest.c
    fs.c
    fs.h
    grep.c
    ide.c
    init.c
    ioapic.c
    kalloc.c
    kbd.c
    kbd.h
    kill.c
    lapic.c
    ln.c
    log.c
    ls.c
    main.c
    memide.c
    memlayout.h
    mkdir.c
    mkfs.c
    mlq.c
    mlq.h
    mmu.h
    mp.c
    mp.h
    param.h
    picirq.c
    pipe.c
    printf.c
    proc.c
    proc.h
    queue.c
    queue.h
    rm.c
    set_priority.c
    sh.c
    sleeplock.c
    sleeplock.h
    spinlock.c
    spinlock.h
    stat.h
    stressfs.c
    string.c
    syscall.c
    syscall.h
    sysfile.c
    sysproc.c
    trap.c
    traps.h
    types.h
    uart.c
    ulib.c
    umalloc.c
    user.h
    usertests.c
    vm.c
    wc.c
    x86.h
    zombie.c)
